--- a/webpage2.css
+++ b/webpage2.css
@@ -70,7 +70,7 @@ display: inline-block;
   border-color: black;
   border-style: solid;
   background-color: white;
-  border-radius: 5%;
+  border-radius: 1%;
   width: 30.33%;
   height: 40%;
   margin-left: 0.5em;
@@ -91,7 +91,7 @@ display: inline-block;
   border-color: black;
   border-style: solid;
   background-color: white;
-  border-radius: 5%;
+  border-radius: 1%;
   width: 30.33%;
   height: 40%;
   margin-left: 0.5em;
@@ -103,11 +103,11 @@ display: inline-block;
 .Castle-info{
   width: 90%;
 }
-.the{float: right;
+.the{float:left;
     border-color: black;
     border-style: solid;
     background-color: white;
-    border-radius: 5%;
+    border-radius: 1%;
     width: 28.33%;
     height: 40%;
     margin-top: 0.5em;
