--- a/webpage2.css
+++ b/webpage2.css
@@ -22,6 +22,7 @@ border: 2px solid black;
   border-radius: 5%;
   border-color: black;
   border-style: solid;
+  margin-bottom: 3em;
 }
 .img2{
   padding-left: 1em;
@@ -30,7 +31,11 @@ border: 2px solid black;
   height: 25%;
   border-radius: 50%;
 }
+.arab{
+  width: 60%;
+}
 .Language{
+  margin-top: 3em;
   margin: 2em;
   padding: 2em;
   width:25em/auto;
