--- a/link.css
+++ b/link.css
@@ -1,11 +1,11 @@
 body{
   margin: 0;
-}
-.img1{
-  background-image: url("IMG_20180302_113549.jpg");
-  position: fixed;
-  opacity: 0.5;
-  width: 100%;
-  height: 100%;
+    background-image: url("IMG_20180302_113549.jpg");
+    position: fixed;
+    opacity: 0.5;
+    width: 100%;
+    height: 100%;
+background-repeat: no-repeat;
+background: cover;
 
 }
