--- a/webpage2.css
+++ b/webpage2.css
@@ -52,6 +52,7 @@ border: 2px solid black;
   height: 40%;
   margin-right:1em;
   padding: 1em;
+  margin-bottom: 1em;
   }
 .img3{
 float: left;
@@ -79,6 +80,7 @@ width: 85%;
   width: 360px;
   height: 40%;
   padding: 1em;
+  margin-bottom: 1em;
   }
 .the{
 
